syntax = "proto3";
import "EntityType.proto";
import "Player.proto";
import "Npc.proto";
import "Sence.proto";
import "Monster.proto";
option java_package = "org.sq.gameDemo.common.proto";
option java_outer_classname = "SenceMsgProto";

//请求
message SenceMsgRequestInfo {
    uint64 msg_id = 1;      //消息id
    uint64 time = 2;        //时间戳(单位:毫秒)
    int32 senceId = 3;       //获取全部写-1
}

//响应
message SenceMsgResponseInfo {
    uint64 msg_id = 1;      //消息id
    int32 result  = 2;
    uint64 time = 3;        //时间戳
    string content = 4;

    Sence sence = 5;
    uint64 id=6;
    int32 senceId = 7;
    string name=8;
    Monster boss = 9;
    uint64 startTime = 10;
    int32 limit = 11;
    uint64 maxTime = 12;
    uint64 rewardExp = 13;
    repeated EntityType entityType = 14;
    repeated Npc npc = 15;
    repeated Monster monster = 16;
    repeated Player player = 17;
}

